<resources>
    <string name="app_name">BaseListView</string>

    <string name="titulo">Mi Lista de Compras</string>
    <string name="hint_agg_producto">Agregar un producto a mi lista</string>
    <string name="hint_agg_producto2">Modificar un producto de mi lista</string>
    <string name="btnAgregar">Agregar</string>

    <string name="cancelar">Cancelar</string>
    <string name="borrarLista">Borrar Lista</string>
    <string name="acercaDe">Acerca De</string>
    <string name="salir">Salir</string>
    <string name="eliminar_title">Has Seleccionado un Producto</string>
    <string name="eliminar_message">¿Qué acción deseas hacer con el producto?</string>
    <string name="delete_button">Eliminar</string>
    <string name="modify_button">Modificar</string>
    <string name="nothing_button">Nada</string>

    <!-- labels -->
    <string name="nombre_estudiante_tv">Estudiante:</string>
    <string name="carnet_tv">Carnet:</string>

    <!-- Datos Alumno -->
    <string name="nombre_estudiante">Hugo Alexander Rodríguez Cruz</string>
    <string name="carnet">25-0663-2017</string>
</resources>