<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/op_borrarLista"
        android:title="@string/borrarLista"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_delete_forever_24"/>

    <item
        android:id="@+id/op_acercaDe"
        android:title="@string/acercaDe"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_info_24"/>

    <item
        android:id="@+id/op_salir"
        android:title="@string/salir"
        android:orderInCategory="102"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_exit_to_app_24"/>

</menu>